--- a/parte-01/pag-cumprimento/modelo.html
+++ b/parte-01/pag-cumprimento/modelo.html
@@ -4,19 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./estilo.css" />
-        <title>Exercise 01</title>
+        <title>Hora do dia</title>
     </head>
-    <body>
+    <body onload="carregar()">
         <header>
-            <h1>Título</h1>
+            <h1>Hora do Dia</h1>
         </header>
 
         <section>
-            <div>testando...</div>
-            <div>mais um teste</div>
+            <div id="mensagem"></div>
+            <div id="foto">
+                <img id="imagem" src="./imgs/manha_recortada.png" alt="foto manha" />
+            </div>
         </section>
 
-        
         <footer>
             <p>JS - Curso em Vídeo</p>
         </footer>
