chaging image attribute

--- a/parte-01/pag-hora-dia/modelo.html
+++ b/parte-01/pag-hora-dia/modelo.html
@@ -14,7 +14,7 @@
         <section>
             <div id="mensagem"></div>
             <div id="foto">
-                <img id="imagem" src="./imgs/manha_recortada.png" alt="foto manha" />
+                <img id="imagem" src="./imgs/manha_recortada.png" alt="foto-exercicio" />
             </div>
         </section>
 
