files updated and new codes

--- a/parte-03/modelo-instrutor.html
+++ b/parte-03/modelo-instrutor.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./estilo.css" />
-        <title>Verificador de Idade</title>
+        <link rel="stylesheet" href="./estilo-instrutor.css" />
+        <title>Ver Idade Instrutor</title>
     </head>
     <body>
         <header>
-            <h1>Verificador de Idade</h1>
+            <h1>Verificador de Idade Instrutor</h1>
         </header>
 
         <section>
@@ -30,14 +30,11 @@
                     </div>
 
                     <div>
-                        <input type="button" value="Verificar" onclick="verificarIdade()" />
+                        <input type="button" value="Verificar" onclick="verificar()" />
                     </div>
 
-                    <div id="mensagem">
+                    <div id="resultado">
                         preencha os dados acima para ver o resutlado
-                    </div>
-                    <div id="imagem">
-                        <img id="foto" src="" alt="foto-exercicio" />
                     </div>
                 </form>
             </div>
@@ -46,6 +43,6 @@
         <footer>
             <p>JS - Curso em Vídeo</p>
         </footer>
-        <script src="./script.js"></script>
+        <script src="./script-instrutor.js"></script>
     </body>
 </html>
