files updated and parte-06 lesson code

--- a/parte-03/modelo.html
+++ b/parte-03/modelo.html
@@ -37,7 +37,7 @@
                         preencha os dados acima para ver o resutlado
                     </div>
                     <div id="imagem">
-                        <img id="foto" src="" alt="foto-exercicio" />
+                        <img id="foto" src="" />
                     </div>
                 </form>
             </div>
